// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox snapshots Checkbox: 0 1`] = `
<label
  className="checkbox-0-1-1"
>
  <input
    checked={false}
    className="checkbox_input-0-1-2"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator-0-1-3"
  />
  <span
    className="checkbox_label-0-1-4"
  >
    Default
  </span>
</label>
`;

exports[`checkbox snapshots Checkbox: 1 1`] = `
<div
  className="checkbox-0-1-6"
>
  <input
    checked={false}
    className="checkbox_input-0-1-7"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator-0-1-8"
  />
  <span
    className="checkbox_label-0-1-9"
  >
    div tag
  </span>
</div>
`;

exports[`checkbox snapshots Checkbox: 2 1`] = `
<label
  className="checkbox-0-1-11"
>
  <input
    checked={true}
    className="checkbox_input-0-1-12"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator-0-1-13"
  />
  <span
    className="checkbox_label-0-1-14"
  >
    Checked (controlled)
  </span>
</label>
`;

exports[`checkbox snapshots Checkbox: 3 1`] = `
<label
  className="checkbox-0-1-16 checkbox__disabled-0-1-20"
>
  <input
    checked={false}
    className="checkbox_input-0-1-17"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator-0-1-18"
  />
  <span
    className="checkbox_label-0-1-19"
  >
    Disabled
  </span>
</label>
`;

exports[`checkbox snapshots Checkbox: 4 1`] = `
<label
  className="checkbox-0-1-21"
>
  <input
    checked={false}
    className="checkbox_input-0-1-22"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator-0-1-23"
  />
  <span
    className="checkbox_label-0-1-24"
  >
    Indeterminate
  </span>
</label>
`;

exports[`checkbox snapshots Checkbox: 5 1`] = `
<label
  className="checkbox-0-1-26"
>
  <input
    checked={true}
    className="checkbox_input-0-1-27"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator-0-1-28"
  />
  <span
    className="checkbox_label-0-1-29"
  >
    Indeterminate checked (controlled)
  </span>
</label>
`;
